vérification mot de passe

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -4,3 +4,8 @@ Langue = "Language"
 Traduire = "Translate"
 contactinfo = "Some contact information goes here"
 accinfo = "Your home page"
+Mentions = "Legal Notice"
+Mentions-infos = "Voici les mentions légalesHere are the legal notices"
+Verification = "Checking passwords"
+securite-info = "Checking the existence of a password in the database."
+securite = "Security"
