--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -4,3 +4,8 @@ Langue = "Langue"
 Traduire = "Traduire"
 contactinfo = "Certaines informations de contact vont ici"
 accinfo = "Votre page d'accueil"
+Mentions = "Mentions légales"
+Mentions-infos = "Voici les mentions légales"
+Verification = "Vérification de mots de passes"
+securite-info = "Controle de l'existance d'un mot de passe en base de données."
+securite = "Sécurité"
