--- a/languages/en.ini
+++ b/languages/en.ini
@@ -9,3 +9,6 @@ Mentions-infos = "Voici les mentions légalesHere are the legal notices"
 Verification = "Checking passwords"
 securite-info = "Checking the existence of a password in the database."
 securite = "Security"
+Search = "Search"
+Recherche = "Database password search"
+notFound = "No results found"
