--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -9,3 +9,6 @@ Mentions-infos = "Voici les mentions légales"
 Verification = "Vérification de mots de passes"
 securite-info = "Controle de l'existance d'un mot de passe en base de données."
 securite = "Sécurité"
+Search = "Chercher"
+Recherche = "Recherche de mots passe en base de données"
+notFound = "Recherche non trouvée"
