--- a/languages/en.ini
+++ b/languages/en.ini
@@ -12,3 +12,5 @@ securite = "Security"
 Search = "Search"
 Recherche = "Database password search"
 notFound = "No results found"
+Formulaire = "Form"
+Contactez = "Contactez us"
