--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -12,3 +12,5 @@ securite = "Sécurité"
 Search = "Chercher"
 Recherche = "Recherche de mots passe en base de données"
 notFound = "Recherche non trouvée"
+Formulaire = "Formulaire"
+Contactez = "Contactez nous"
